# photo-archiver

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PLAN.md  PROMPTS.md  README.md  config.example.yaml  pyproject.toml
src/media_archiver/: __init__.py  cli.py  config.py  datetime_resolver.py  dedup.py  deduplicator.py  executor.py  models.py  month_normalizer.py  renamer.py  reporter.py  scanner.py  sorter.py
src/photo_tool/: cli.py  config.py  deduplicator.py  executor.py  renamer.py
tests/: conftest.py  test_cli.py  test_cli_apply_cleanup.py  test_cli_dry_run_e2e.py  test_config.py  test_datetime_resolver.py  test_deduplicator.py  test_end_to_end_dry_run.py  test_executor.py  test_executor_errors.py  test_month_normalizer.py  test_renamer.py  test_reporter.py  test_scanner.py  test_scanner_errors.py  test_sorter.py
tests/fixtures/: datetime_cases.yaml  filename_datetime_cases.yaml  month_folder_cases.yaml  rename_collision_cases.yaml  sort_execution_cases.yaml  sort_target_cases.yaml
